--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^8.5.3",
     "@types/multer": "^1.4.6",
     "@types/node": "^15.12.2",
+    "@types/nodemailer": "^6.4.3",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.29.0",
@@ -34,10 +35,13 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.22.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.34"
