--- a/package.json
+++ b/package.json
@@ -32,18 +32,25 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@types/ioredis": "^4.26.6",
+    "@types/redis": "^2.8.31",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "date-fns": "^2.22.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.27.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "typeorm-pagination": "^2.0.3"
   }
 }
